[update] config [#106]